WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
40239
[Qt] ChromeClientQt.h has coding-style errors
https://bugs.webkit.org/show_bug.cgi?id=40239
Summary
[Qt] ChromeClientQt.h has coding-style errors
Anders Bakken
Reported
2010-06-07 11:18:21 PDT
[Qt] ChromeClientQt.h has coding-style errors
Attachments
Patch
(11.16 KB, patch)
2010-06-07 11:19 PDT
,
Anders Bakken
levin
: review-
Details
Formatted Diff
Diff
ChromeClientQt.h style fixes
(12.93 KB, patch)
2011-03-30 18:51 PDT
,
Nancy Piedra
benjamin
: review-
Details
Formatted Diff
Diff
New patch to fix ChromeClientQt.h style issues
(12.86 KB, patch)
2011-03-31 07:00 PDT
,
Nancy Piedra
benjamin
: review+
benjamin
: commit-queue-
Details
Formatted Diff
Diff
New patch to fix Changelog style issue and namespace issue.
(12.85 KB, patch)
2011-03-31 07:35 PDT
,
Nancy Piedra
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Anders Bakken
Comment 1
2010-06-07 11:19:16 PDT
Created
attachment 58050
[details]
Patch
David Levin
Comment 2
2010-06-09 09:36:04 PDT
Comment on
attachment 58050
[details]
Patch WebKit/qt/WebCoreSupport/ChromeClientQt.h:36 + #include "RefCounted.h" #include <wtf/RefCounted.h>
Nancy Piedra
Comment 3
2011-03-30 18:51:27 PDT
Created
attachment 87656
[details]
ChromeClientQt.h style fixes It's been a long time since the original patch was submitted so I created a new patch.
WebKit Review Bot
Comment 4
2011-03-30 18:54:46 PDT
Attachment 87656
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit/qt/ChangeLog', u'Source/WebK..." exit_code: 1 Source/WebKit/qt/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Nancy Piedra
Comment 5
2011-03-30 19:06:41 PDT
(In reply to
comment #4
)
>
Attachment 87656
[details]
did not pass style-queue: > Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit/qt/ChangeLog', u'Source/WebK..." exit_code: 1 > Source/WebKit/qt/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] > Total errors found: 1 in 2 files > If any of these errors are false positives, please file a bug against check-webkit-style.
There is a bug number in the Changelog so I'm not sure what is missing here.
Benjamin Poulain
Comment 6
2011-03-31 04:49:38 PDT
Comment on
attachment 87656
[details]
ChromeClientQt.h style fixes View in context:
https://bugs.webkit.org/attachment.cgi?id=87656&action=review
> Source/WebKit/qt/WebCoreSupport/ChromeClientQt.h:37 > +#include "RefCounted.h"
That should be #include <wtf/RefCounted.h>
> Source/WebKit/qt/WebCoreSupport/ChromeClientQt.h:100 > + virtual void addMessageToConsole(MessageSource, MessageType, MessageLevel, const String& message, > + unsigned int lineNumber, const String& sourceID);
You can put this on a single line, we don't limit line to 80 characters in WebKit.
> Source/WebKit/qt/WebCoreSupport/ChromeClientQt.h:152 > + // see ChromeClient.h
You can remove that line.
> Source/WebKit/qt/WebCoreSupport/ChromeClientQt.h:153 > + // this is a hook for WebCore to tell us what we need to do with the GraphicsLayers
Comments should be sentences, with a upper case at start, and a dot at the end.
> Source/WebKit/qt/WebCoreSupport/ChromeClientQt.h:200 > + WebCore::KURL lastHoverURL; > + WTF::String lastHoverTitle; > + WTF::String lastHoverContent;
Where are those prefixed by the namespace? Aren't we in the WebCore namespace already? And from the API is looks like WTF is also defined.
Nancy Piedra
Comment 7
2011-03-31 07:00:20 PDT
Created
attachment 87717
[details]
New patch to fix ChromeClientQt.h style issues I have uploaded a new patch based on the comments. I still get style error that the Changelog does not have a bug number but it does so I'm not sure what to do about that.
WebKit Review Bot
Comment 8
2011-03-31 07:02:15 PDT
Attachment 87717
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit/qt/ChangeLog', u'Source/WebK..." exit_code: 1 Source/WebKit/qt/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Benjamin Poulain
Comment 9
2011-03-31 07:04:50 PDT
Comment on
attachment 87717
[details]
New patch to fix ChromeClientQt.h style issues View in context:
https://bugs.webkit.org/attachment.cgi?id=87717&action=review
Looks good. Just check the namespace question before pushing.
> Source/WebKit/qt/WebCoreSupport/ChromeClientQt.h:113 > + virtual WebCore::KeyboardUIMode keyboardUIMode();
Is the WebCore namespace needed here?
Benjamin Poulain
Comment 10
2011-03-31 07:06:42 PDT
(In reply to
comment #7
)
> I have uploaded a new patch based on the comments. I still get style error that the Changelog does not have a bug number but it does so I'm not sure what to do about that.
Check if there a character that should not be here in the checklog. It could be a \t or an non-breaking space in there.
Nancy Piedra
Comment 11
2011-03-31 07:35:14 PDT
Created
attachment 87724
[details]
New patch to fix Changelog style issue and namespace issue. I uploaded a new patch that fixes the Changelog style issue and namespace issue.
WebKit Commit Bot
Comment 12
2011-03-31 09:05:08 PDT
The commit-queue encountered the following flaky tests while processing
attachment 87724
[details]
: animations/suspend-resume-animation.html
bug 48161
(author:
cmarrin@apple.com
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 13
2011-03-31 09:07:42 PDT
Comment on
attachment 87724
[details]
New patch to fix Changelog style issue and namespace issue. Clearing flags on attachment: 87724 Committed
r82585
: <
http://trac.webkit.org/changeset/82585
>
WebKit Commit Bot
Comment 14
2011-03-31 09:07:46 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug