2011-03-31  Nancy Piedra  <nancy.piedra@nokia.com>

Reviewed by Benjamin Poulain.

        [Qt] ChromeClientQt.h has coding-style errors
        https://bugs.webkit.org/show_bug.cgi?id=40239

        * WebCoreSupport/ChromeClientQt.h:
        (WebCore::ChromeClientQt::scrollbarsModeDidChange):
        (WebCore::ChromeClientQt::needTouchEvents):
        (WebCore::ChromeClientQt::formStateDidChange):
        (WebCore::ChromeClientQt::scrollRectIntoView):
        (WebCore::ChromeClientQt::requestGeolocationPermissionForFrame):
        (WebCore::ChromeClientQt::cancelGeolocationPermissionRequestForFrame):

Canonical link: https://commits.webkit.org/72381@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82585 268f45cc-cd09-0410-ab3c-d52691b4dbfc